new proj/src/objects/GE_PRM_Appointment_Approval__c.object
<CustomObject>
    <description>PRM Object</description>
    <fields>
        <fullName>DOA_Cycle_Time_by_Approver__c</fullName>
        <formula>GE_PRM_DOA_Approved_Rejected_Time_Stamp__c  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOA Cycle Time by Approver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_Credit_limit__c</fullName>
        <label>Credit limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Appointment__c</fullName>
        <description>This is master look up field</description>
        <label>Appointment</label>
        <referenceTo>GE_PRM_Appointment__c</referenceTo>
        <relationshipLabel>Appointment Approvals</relationshipLabel>
        <relationshipName>Appointment_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver_Email__c</fullName>
        <formula>GE_PRM_Approvers__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approvers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approvers</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Appointment_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CM_Comments__c</fullName>
        <label>Channel Manager Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Comments__c</fullName>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_DOA_Approved_Rejected_Time_Stamp__c</fullName>
        <label>DOA Approved/Rejected Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Delegated_User_Email__c</fullName>
        <formula>GE_PRM_Delegated_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Delegated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delegated User of the Approver</description>
        <inlineHelpText>Delegated User of the Approver</inlineHelpText>
        <label>Delegated User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Appointment_Approvals_Delegated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_I_Understand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Understand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_If_yes_provide_payment_terms__c</fullName>
        <label>If yes please provide the payment terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Is_Approver_Active__c</fullName>
        <formula>if( GE_PRM_Approvers__r.IsActive, &apos;true&apos; , &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Approver Active?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Is_Delegated_Active__c</fullName>
        <formula>if( GE_PRM_Delegated_User__r.IsActive , &apos;true&apos;,&apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Delegated Active ?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Is_there_a_credit_limit_needed__c</fullName>
        <label>Is there a credit limit needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Region__c</fullName>
        <inlineHelpText>Region</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Response_to_above_ques_credit_lim__c</fullName>
        <label>Response to the above question</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Response_to_above_ques_pay_terms__c</fullName>
        <label>Response to the above question</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status_Date__c</fullName>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status__c</fullName>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Information Provided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Information Provided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_payment_Terms_requested__c</fullName>
        <label>What are the payment Terms requested?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_payment_terms_Non_Stand__c</fullName>
        <label>Are the payment terms &quot;Non-Standard&quot;?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Appointment Approval</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Appointment Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Approvals</pluralLabel>
    <recordTypes>
        <fullName>GE_PRM_Approval</fullName>
        <active>true</active>
        <label>Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PRM_Finance_Approval</fullName>
        <active>true</active>
        <label>Finance Approval</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GE_PRM_Comments_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( GE_PRM_I_Understand__c = TRUE,  ISPICKVAL( GE_PRM_Status__c , &apos;Rejected&apos;), ISBLANK(GE_PRM_Comments__c ))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Comments__c</errorDisplayField>
        <errorMessage>Please provide Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_CreditLimit_Response_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(GE_PRM_Is_there_a_credit_limit_needed__c, &apos;Yes&apos;), ISBLANK( GE_Credit_limit__c ) )</errorConditionFormula>
        <errorDisplayField>GE_Credit_limit__c</errorDisplayField>
        <errorMessage>Please provide Credit Limit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_I_Understand_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( GE_PRM_Status__c , &apos;Rejected&apos;),
GE_PRM_I_Understand__c = FALSE )</errorConditionFormula>
        <errorDisplayField>GE_PRM_I_Understand__c</errorDisplayField>
        <errorMessage>I understand that if this Appointment Approval is rejected, it will not be reversible.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Is_there_credit_limit_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName =&apos;GE_PRM_Finance_Approval&apos;,  ISPICKVAL( GE_PRM_Status__c , &apos;Approved&apos;), 
ISPICKVAL( GE_PRM_Is_there_a_credit_limit_needed__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Is_there_a_credit_limit_needed__c</errorDisplayField>
        <errorMessage>Please provide the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Non_Std_payment_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName =&apos;GE_PRM_Finance_Approval&apos;,  ISPICKVAL( GE_PRM_Status__c , &apos;Approved&apos;), 
ISPICKVAL( GE_PRM_payment_terms_Non_Stand__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>GE_PRM_payment_terms_Non_Stand__c</errorDisplayField>
        <errorMessage>Please provide the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_PaymtTerms_CreditLmt_section_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName =&apos;GE_PRM_Finance_Approval&apos;,  ISPICKVAL( GE_PRM_Status__c , &apos;Approved&apos;), 
ISBLANK( GE_PRM_payment_Terms_requested__c ))</errorConditionFormula>
        <errorDisplayField>GE_PRM_payment_Terms_requested__c</errorDisplayField>
        <errorMessage>Please provide the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Response_Provide_PaymentTerms_req</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(GE_PRM_payment_terms_Non_Stand__c, &apos;Yes&apos;), 
ISBLANK( GE_PRM_If_yes_provide_payment_terms__c ))</errorConditionFormula>
        <errorDisplayField>GE_PRM_If_yes_provide_payment_terms__c</errorDisplayField>
        <errorMessage>Please provide the Payment Terms</errorMessage>
    </validationRules>
</CustomObject>